--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <ul>
         <li>IDK you're horny?</li>
         <li>The lampoon clearly has the hottest moms but don't even get me started on the dads.</li>
-        <li>STD's Garunteed</li>
+        <li>STD's Guaranteed</li>
     </ul>
 </div>
 {% endblock %}
