--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,3 +1,4 @@
+<!-- layout.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}OlderWomenDating{% endblock %}</title>
-    <link href="/static/landingPage.css" type="text/css" rel="stylesheet">
-    <link href="/static/favicon.ico" rel="icon">
-    <script src="/static/cookie.js"></script>
+    <link href="{{ url_for('static', filename='assets/b6a12d7b/sum/css/landingPage.css') }}" type="text/css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='assets/b6a12d7b/sum/img/favicon.ico') }}" rel="icon">
+    <script src="{{ url_for('static', filename='assets/b6a12d7b/common/js/cookie.js') }}"></script>
     <style>
         .banner {
-            background-image: url(/static/indexbaner.webp);
+            background-image: url({{ url_for('static', filename='assets/b6a12d7b/sum/img/indexbaner.webp') }});
         }
         @media screen and (max-width: 768px) {
             .banner {
-                background-image: url(/static/indexbanerMobile.webp);
+                background-image: url({{ url_for('static', filename='assets/b6a12d7b/sum/img/indexbanerMobile.webp') }});
             }
         }
     </style>
