--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,14 @@
 {% extends "layout.html" %}
 
-{% block title %}Welcome - MaMa Knows Best{% endblock %}
+{% block title %}Welcome to MaMa Knows Best{% endblock %}
 
 {% block main %}
-<!-- Begin Homepage Content -->
-<section class="homepage">
-    <div class="container">
-        <h1>Welcome to MaMa Knows Best</h1>
-        <p>This is your new Flask-powered homepage using your custom design and layout.</p>
-        <!-- You can insert content from the original index.html here -->
-    </div>
+<section class="hero">
+  <div class="container">
+    <h1>Find Love Where It Wasn't Expected</h1>
+    <p>Connecting mature wisdom with youthful energy, one swipe at a time.</p>
+    <a href="/register" class="setLang signUpNow">Join Now</a>
+  </div>
 </section>
-<!-- End Homepage Content -->
 {% endblock %}
+
