--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}MaMa Knows Best{% endblock %}</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <title>{% block title %}Home - MaMa Knows Best{% endblock %}</title>
 
-    <!-- Fonts -->
-    <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-Regular.ttf') }}" as="font" crossorigin="anonymous">
-    <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-ExtraBold.ttf') }}" as="font" crossorigin="anonymous">
-    <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-MediumItalic.ttf') }}" as="font" crossorigin="anonymous">
-    <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-Medium.ttf') }}" as="font" crossorigin="anonymous">
-    <link rel="preload" href="{{ url_for('static', filename='fonts/Montserrat-Bold.ttf') }}" as="font" crossorigin="anonymous">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='Content/Images/fav.png') }}" type="image/x-icon" />
+  <link rel="apple-touch-icon" href="{{ url_for('static', filename='Content/Images/fav.png') }}" />
 
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='images/fav.png') }}" type="image/x-icon">
-    <link rel="apple-touch-icon" href="{{ url_for('static', filename='images/fav.png') }}">
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='Content/css?v=ODZDyxoWpx4otkVdk414n1B2CGVx6cg2VzcnuhHEMbg1.css') }}" />
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <!-- Fonts (if separate, include Montserrat from Google or local) -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" />
 
-    <!-- Optional JS -->
-    <script src="{{ url_for('static', filename='js/tiny-slider.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/prism.js') }}"></script>
+  <!-- JS -->
+  <script src="{{ url_for('static', filename='Scripts/prism.js') }}"></script>
+  <script src="{{ url_for('static', filename='Scripts/tiny-slider.js') }}"></script>
 </head>
-
 <body>
-    {% block main %}{% endblock %}
+
+  <!-- BEGIN: Full original HTML content -->
+  <header>
+    <!-- Your original nav bar here -->
+  </header>
+
+  <main>
+    {% block main %}
+    <!-- Homepage content from index.html will show up here -->
+    {% endblock %}
+  </main>
+
+  <footer>
+    <!-- Your original footer from the design -->
+  </footer>
+
 </body>
 </html>
