--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,9 @@
 {% extends "layout.html" %}
 
-{% block title %}Welcome to MaMa Knows Best{% endblock %}
+{% block title %}Home - MaMa Knows Best{% endblock %}
 
 {% block main %}
-<section class="hero">
-  <div class="container">
-    <h1>Find Love Where It Wasn't Expected</h1>
-    <p>Connecting mature wisdom with youthful energy, one swipe at a time.</p>
-    <a href="/register" class="setLang signUpNow">Join Now</a>
-  </div>
-</section>
+<!-- Optional: you can leave this empty to use layout.html’s default content -->
 {% endblock %}
+
 
