--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
         <link href="/static/airplaine_icon.ico" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
         <title>Lonely?: {% block title %}{% endblock %}</title>
 
