--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     display: flex;
+    font-family: 'Inter', sans-serif;
     flex-direction: column; /
 }
 
