--- a/templates/image_flight_search.html
+++ b/templates/image_flight_search.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-
+{% block body_class %}light-pink-page{% endblock %}
 {% block main %}
 <h1>Hottest MILF and DILF Catalogue 2025</h1>
 <h2>Choose your lovely date by clicking their face</h2>
