--- a/templates/image_flight_search.html
+++ b/templates/image_flight_search.html
@@ -1,8 +1,11 @@
 {% extends 'layout.html' %}
 {% block body_class %}light-pink-page{% endblock %}
 {% block main %}
-<h1>Hottest MILF and DILF Catalogue 2025</h1>
-<h2>Choose your lovely date by clicking their face</h2>
+<div class="page-title text-center my-4">
+  <h1>Hottest <span class="pink">MILF</span> and <span class="pink">DILF</span> Catalogue <span class="year">2025</span></h1>
+  <h2>Choose your lovely date by <span class="underline">clicking their face</span></h2>
+</div>
+
 
 <!-- Loading screen -->
 <div id="loading-screen" class="loading-overlay">
