--- a/static/styles.css
+++ b/static/styles.css
@@ -226,4 +226,49 @@ footer {
 body.light-pink-page {
     background-color: #ffe6f0; /* soft blush pink */
 }
+.page-title {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.page-title h1 {
+    font-size: 2.8rem;
+    font-weight: 700;
+    color: #222;
+    line-height: 1.3;
+}
+
+.page-title h2 {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: #444;
+    margin-top: 10px;
+}
+
+.page-title .pink {
+    color: #ff69b4;
+    font-weight: 700;
+}
+
+.page-title .year {
+    background: linear-gradient(to right, #ff9abf, #ffc0cb);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: 800;
+}
+
+.page-title .underline {
+    position: relative;
+}
+
+.page-title .underline::after {
+    content: "";
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: #ffaad4;
+    border-radius: 2px;
+}
 
