--- a/static/styles.css
+++ b/static/styles.css
@@ -271,4 +271,68 @@ body.light-pink-page {
     background-color: #ffaad4;
     border-radius: 2px;
 }
+.page-header {
+    margin-top: 50px;
+    margin-bottom: 40px;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.page-header h1 {
+    font-size: 2.8rem;
+    font-weight: 800;
+    color: #ff69b4;
+    text-shadow: 1px 1px 0 #fff;
+    line-height: 1.3;
+}
+
+.page-header h2 {
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: #444;
+    margin-top: 15px;
+}
+
+/* Word highlights */
+.page-header .milf {
+    color: #ff69b4;
+    font-weight: 800;
+    text-shadow: 0 1px 0 #fff;
+}
+
+.page-header .dilf {
+    color: #69b4ff;
+    font-weight: 800;
+    text-shadow: 0 1px 0 #fff;
+}
+
+.page-header .year {
+    font-size: 3rem;
+    color: #ffaad4;
+    font-weight: 900;
+    text-shadow: 2px 2px 5px rgba(255, 105, 180, 0.2);
+}
+
+.page-header .highlight {
+    color: #222;
+    font-weight: 600;
+}
+
+.page-header .emphasis {
+    color: #ff69b4;
+    font-weight: 600;
+    position: relative;
+}
+
+.page-header .emphasis::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #ffd6e8;
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    border-radius: 2px;
+}
 
