--- a/templates/image_flight_search.html
+++ b/templates/image_flight_search.html
@@ -1,10 +1,15 @@
 {% extends 'layout.html' %}
 {% block body_class %}light-pink-page{% endblock %}
 {% block main %}
-<div class="page-title text-center my-4">
-  <h1>Hottest <span class="pink">MILF</span> and <span class="pink">DILF</span> Catalogue <span class="year">2025</span></h1>
-  <h2>Choose your lovely date by <span class="underline">clicking their face</span></h2>
+<div class="page-header text-center">
+  <h1>
+    <span class="highlight">Hottest</span>
+    <span class="milf">MILF</span> and <span class="dilf">DILF</span>
+    <span class="highlight">Catalogue</span> <span class="year">2025</span>
+  </h1>
+  <h2>Choose your lovely date by <span class="emphasis">clicking their face 💘</span></h2>
 </div>
+
 
 
 <!-- Loading screen -->
