--- a/templates/index.html
+++ b/templates/index.html
@@ -3,22 +3,30 @@
 {% block title %}
     Log In
 {% endblock %}
+
 {% block body_class %}
-    index-page
+    light-pink-page
 {% endblock %}
 
 {% block main %}
-<div class="top">
-<h1>Are you Lonely? Depressed? Looking for Love?</h1>
-<p>A sexy DILF or MILF is your cure and we have the SEXiest catalogue</p>
-</div>
+<div class="landing-wrapper text-center">
 
-<div class="features">
+  <div class="top-flirt">
+    <h1>Are you Lonely? Depressed? Looking for Love?</h1>
+    <p>
+      A <span class="highlighted">sexy DILF</span> or <span class="highlighted">MILF</span> is your cure —  
+      and we have the <span class="hot">SEXiest</span> catalogue.
+    </p>
+  </div>
+
+  <div class="features-list">
     <h2>Why Choose Us?</h2>
     <ul>
-        <li>IDK you're horny?</li>
-        <li>The lampoon clearly has the hottest moms but don't even get me started on the dads.</li>
-        <li>STD's Garunteed</li>
+      <li><span class="emoji">😈</span> IDK you're horny?</li>
+      <li><span class="emoji">🔥</span> The Lampoon has the hottest moms, but don’t even get me started on the dads.</li>
+      <li><span class="emoji">💋</span> STD’s <span class="crossed">Guaranteed</span> *Optional</li>
     </ul>
+  </div>
+
 </div>
 {% endblock %}
