--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="landing-wrapper text-center">
+<div class="landing-wrapper">
 
   <div class="top-flirt">
     <h1>Are you Lonely? Depressed? Looking for Love?</h1>
@@ -24,9 +24,10 @@
     <ul>
       <li><span class="emoji">😈</span> IDK you're horny?</li>
       <li><span class="emoji">🔥</span> The Lampoon has the hottest moms, but don’t even get me started on the dads.</li>
-      <li><span class="emoji">💋</span> STD’s <span class="crossed">Guaranteed</span> *Optional</li>
+      <li><span class="emoji">💋</span> STD’s <span class="crossed">Guaranteed</span> <em>*Optional</em></li>
     </ul>
   </div>
 
 </div>
+
 {% endblock %}
