--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <ul>
       <li><span class="emoji">😈</span> IDK you're horny?</li>
       <li><span class="emoji">🔥</span> The Lampoon has the hottest moms, but don’t even get me started on the dads.</li>
-      <li><span class="emoji">💋</span> STD’s <span class="crossed">Guaranteed</span> <em>*Optional</em></li>
+      <li><span class="emoji">💋</span> STD <span class="crossed">Free</span> <em>*Guaranteed</em></li>
     </ul>
   </div>
 
